[package]
name = "dpetoolbox"
version = "1.0.0"
edition = "2024"
description = "DPE Network Analysis Toolbox - Modern CLI for network troubleshooting"
authors = ["diesteve"]
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
colored = "2"
indicatif = "0.17"
reqwest = { version = "0.12", features = ["stream"] }
futures = "0.3"
dirs = "5"
zip = "2"
dialoguer = "0.11"
regex = "1"
chrono = "0.4"
arboard = "3"
crossterm = "0.28"

[[bin]]
name = "dpetoolbox"
path = "src/main.rs"
