[package]
name = "dpetoolbox"
version = "2.0.2"
edition = "2024"
description = "DPE Network Analysis Toolbox - CLI and Web UI for network troubleshooting"
authors = ["Diogo Esteves"]
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
anyhow = "1"
colored = "2"
indicatif = "0.17"
reqwest = { version = "0.12", features = ["stream"] }
futures = "0.3"
dirs = "5"
zip = "2"
dialoguer = "0.11"
regex = "1"
chrono = "0.4"
arboard = "3"
crossterm = "0.28"

# Web UI dependencies
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
rust-embed = "8"
mime_guess = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
rfd = "0.15"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[[bin]]
name = "dpetoolbox"
path = "src/main.rs"
